# gradescope-ics

./: Dockerfile  app.py  encode.py  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
pyscope/: pyscope.py
templates/: index.html
